# Taxibil

./: .editorconfig  .gitignore  .gitmodules  README.md  meson.build
Include/: types.hpp
Kommunikationsmodul/: meson.build
Kommunikationsmodul/opencv_workdir/camera/: meson.build
Kommunikationsmodul/opencv_workdir/camera/src/: main.cpp  meson.build
Kommunikationsmodul/opencv_workdir/lane_detection_advanced/: README.txt  meson.build
Kommunikationsmodul/opencv_workdir/lane_detection_advanced/src/: binarization-utils.hpp  globals.hpp  line-utils.cpp  line-utils.hpp  main.cpp  maths.cpp  maths.hpp  meson.build  perspective_utils.cpp  perspective_utils.hpp  polynomial-regression.hpp  timing.cpp  timing.hpp  trackbars.cpp  trackbars.hpp
Kommunikationsmodul/opencv_workdir/lane_detection_basic/: meson.build  meson_options.txt
Kommunikationsmodul/opencv_workdir/lane_detection_basic/res/: documentation.txt
Kommunikationsmodul/opencv_workdir/lane_detection_basic/src/: main.cpp  meson.build  utils.cpp  utils.hpp
Kommunikationsmodul/src/: i2c-master.cpp  i2c-master.hpp  main.cpp  meson.build  pathing.cpp  pathing.hpp  server.cpp  server.hpp  steering.cpp  steering.hpp  test-main.cpp
Kommunikationsmodul/src/computer_vision/: binarization-utils.cpp  computer-vision.cpp  computer-vision.hpp  globals.hpp  line-utils.cpp  line-utils.hpp  maths.cpp  maths.hpp  perspective-utils.cpp  perspective-utils.hpp  pipeline.cpp  pipeline.hpp
Sensormodul/: Sensormodul.atsln  Sensormodul.atsuo  Sensormodul.cpp  Sensormodul.cppproj
Styrmodul/: Styrmodul.atsln  Styrmodul.atsuo  Styrmodul.cpp  Styrmodul.cppproj
UI-modul/: pom.xml  todo.txt
UI-modul/src/main/java/UI/: Client.java  DataComponent.java  InputWindow.java  InterfaceWindow.java  MapComponent.java  Run.java  WifiThread.java
